<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/TitleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6750A3"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ContentLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"

        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Question"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:gravity="center_vertical"
            android:text="@string/question_text"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/ButtonLayout"
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ButtonTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_true" />

            <Button
                android:id="@+id/ButtonFalse"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_false" />

        </LinearLayout>

        <Button
            android:id="@+id/ButtonCheat"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cheat" />

        <LinearLayout
            android:id="@+id/directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ButtonPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_previous"
                app:icon="@drawable/arrow_left" />

            <Button
                android:id="@+id/ButtonNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_next"
                android:textAlignment="center"
                app:icon="@drawable/arrow_right"
                app:iconGravity="end" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>