<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheatActivity">

    <LinearLayout
        android:id="@+id/TitleLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6750A3"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/CheatAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_cheat"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/ButtonYesCheat"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:text="@string/button_yesCheat" />

        <Button
            android:id="@+id/ButtonNoCheat"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/button_noCheat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>